--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": "https://exercises-06-cache-management.bookshelf.lol/",
   "engines": {
-    "node": "12 || 14 || 15",
+    "node": "12 || 14 || 15 || 16",
     "npm": ">=6"
   },
   "dependencies": {
