--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.3",
     "react-icons": "^4.2.0",
-    "react-query": "2.1.1",
-    "react-query-devtools": "2.3.3",
+    "react-query": "^3.23.2",
+    "react-query-devtools": "3.0.0-beta.1",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.3",
